# claude-dash

./: .gitignore  LICENSE  README.md  pyproject.toml
src/claude_dash/: __init__.py  app.py  config.py  iterm.py
