[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-dash"
version = "0.1.0"
description = "A TUI dashboard for Claude Code setup - see your CLAUDE.md, MCP servers, and skills at a glance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mark Fuechec" }
]
keywords = ["claude", "claude-code", "tui", "dashboard", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
claude-dash = "claude_dash.app:main"
claude-pane = "claude_dash.iterm:main"

[project.urls]
Homepage = "https://github.com/mfuechec/claude-dash"
Repository = "https://github.com/mfuechec/claude-dash"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dash"]
